--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-native-async-storage/async-storage": "1.17.11",
     "@react-navigation/bottom-tabs": "^6.5.7",
     "@react-navigation/native": "^6.1.6",
+    "babel-plugin-inline-dotenv": "^1.7.0",
     "css-select": "^5.1.0",
     "css-tree": "^2.3.1",
     "date-fns": "^2.30.0",
